new IntegerからInteger.valueOfに変更